<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aprilgrid</name>
  <version>0.1.0</version>
  <description>A basic C++ library for performing april grid detections and pose estimations using OpenCV</description>
  <maintainer email="JacobHartzer@gmail.com">Jacob Hartzer</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
